Add idyntree-model-simplify-shapes command line tool
This tool is useful to take in input a model, and return in
output the same model, but with all the geometries of the model
approximated with their axis aligned bounding boxes.

Fix https://github.com/robotology/idyntree/issues/933 .

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -15,6 +15,9 @@ macro(IDYNTREE_ADD_TOOL tool_name tool_code)
                                                idyntree-visualization
                                                Eigen3::Eigen)
     target_compile_options(${tool_name} PRIVATE ${IDYNTREE_WARNING_FLAGS})
+    if(TARGET idyntree-solid-shapes)
+        target_link_libraries(${tool_name} PRIVATE idyntree-solid-shapes)
+    endif()
     install(TARGETS ${tool_name} DESTINATION bin)
 endmacro(IDYNTREE_ADD_TOOL tool_name tool_code)
 
@@ -22,6 +25,10 @@ idyntree_add_tool(idyntree-model-info idyntree-model-info.cpp)
 
 if(IDYNTREE_USES_IRRLICHT)
     idyntree_add_tool(idyntree-model-view idyntree-model-view.cpp)
+endif()
+
+if(IDYNTREE_USES_ASSIMP)
+    idyntree_add_tool(idyntree-model-simplify-shapes idyntree-model-simplify-shapes.cpp)
 endif()
 
 if(IDYNTREE_COMPILES_YARP_TOOLS)
