--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,20 +1,5 @@
 [master]
-main_page = "docs/pages/main-page.dox"
-additional_pages = ["docs/pages/python-additional-info.md"]
+main_page = "doc/main.dox"
+additional_pages = []
 src_folder = "src"
 
-['v0.4.0']
-main_page = "docs/pages/main-page.dox"
-src_folder = "src"
-
-['v0.3.0']
-main_page = "docs/pages/main-page.dox"
-src_folder = "src"
-
-['v0.2.0']
-main_page = "docs/pages/main-page.dox"
-src_folder = "src"
-
-['v0.1.1']
-main_page = "README.md"
-src_folder = "src"
