--- a/.github/workflows/apt-docker-ci.yml
+++ b/.github/workflows/apt-docker-ci.yml
@@ -31,9 +31,9 @@ jobs:
 
     - name: Dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get upgrade
-        sudo apt-get install \
+        apt-get update
+        apt-get upgrade
+       apt-get install \
             git build-essential cmake libace-dev coinor-libipopt-dev libeigen3-dev swig \
             libxml2-dev python-dev python3-numpy valgrind libassimp-dev libirrlicht-dev
 
