--- a/.github/workflows/apt-docker-ci.yml
+++ b/.github/workflows/apt-docker-ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build_type: [Debug,Release]
+        build_type: [Release]
         cmake_generator:
           - "Ninja"
         docker_image:
