--- a/.github/workflows/apt-docker-ci.yml
+++ b/.github/workflows/apt-docker-ci.yml
@@ -20,6 +20,7 @@ jobs:
           - "Ninja"
         docker_image:
           - "ubuntu:focal"
+          - "ubuntu:jammy"
           - "debian:testing"
           - "debian:sid"
 
