--- a/.github/workflows/apt-docker-ci.yml
+++ b/.github/workflows/apt-docker-ci.yml
@@ -36,7 +36,7 @@ jobs:
         apt-get -y upgrade
         apt-get -y install \
             git build-essential cmake libace-dev coinor-libipopt-dev libeigen3-dev swig \
-            libxml2-dev python-dev python3-numpy valgrind libassimp-dev libirrlicht-dev
+            libxml2-dev python-dev-is-python3 python3-numpy valgrind libassimp-dev libirrlicht-dev
 
     - name: Configure
       run: |
