--- a/.github/workflows/apt-docker-ci.yml
+++ b/.github/workflows/apt-docker-ci.yml
@@ -35,7 +35,7 @@ jobs:
         apt-get update
         apt-get -y upgrade
         apt-get -y install \
-            git build-essential cmake libace-dev coinor-libipopt-dev libeigen3-dev swig \
+            git build-essential cmake libace-dev coinor-libipopt-dev libeigen3-dev swig liboctave-dev \
             libxml2-dev python-dev-is-python3 python3-numpy valgrind libassimp-dev libirrlicht-dev
 
     - name: Configure
