--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -15,6 +15,7 @@ set(IDYNTREE_CORE_EXP_HEADERS include/iDynTree/Axis.h
                               include/iDynTree/PositionRaw.h
                               include/iDynTree/Rotation.h
                               include/iDynTree/RotationRaw.h
+                              include/iDynTree/RotationalInertia.h
                               include/iDynTree/RotationalInertiaRaw.h
                               include/iDynTree/SpatialAcc.h
                               include/iDynTree/SpatialForceVector.h
@@ -51,7 +52,7 @@ set(IDYNTREE_CORE_EXP_SOURCES src/Axis.cpp
                               src/GeomVector3.cpp
                               src/Position.cpp
                               src/Rotation.cpp
-                              src/RotationalInertiaRaw.cpp
+                              src/RotationalInertia.cpp
                               src/SpatialAcc.cpp
                               src/SpatialForceVector.cpp
                               src/SpatialMomentum.cpp
